docs: добавить в .env.example варианты подключения LLM (Anthropic, Google, Groq, OpenRouter, Azure, Ollama)

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,33 @@
 # Telegram Bot Token from @BotFather
 BOT_TOKEN=your_bot_token_here
 
-# OpenAI API Key for LLM (https://platform.openai.com/api-keys)
+# --- LLM: укажи один из вариантов в зависимости от провайдера ---
+
+# OpenAI (по умолчанию в боте)
+# https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
+
+# Anthropic (Claude)
+# https://console.anthropic.com/
+# ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
+# Google (Gemini)
+# https://aistudio.google.com/apikey
+# GOOGLE_API_KEY=your_google_api_key_here
+
+# Groq (быстрый inference, в т.ч. Llama)
+# https://console.groq.com/keys
+# GROQ_API_KEY=your_groq_api_key_here
+
+# OpenRouter (единый API для разных моделей)
+# https://openrouter.ai/keys
+# OPENROUTER_API_KEY=your_openrouter_api_key_here
+# OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+
+# Azure OpenAI
+# AZURE_OPENAI_API_KEY=your_azure_key_here
+# AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+
+# Ollama (локальная модель, по умолчанию http://localhost:11434)
+# OLLAMA_BASE_URL=http://localhost:11434
+# OLLAMA_MODEL=llama3.2
