feat: выбор LLM по раскомментированному блоку в .env, директивы модели
- .env.example: для каждого провайдера добавлены *_MODEL, инструкция раскомментировать один блок
- config: get_active_llm() — первый провайдер с заданным ключом и его модель
- llm: поддержка OpenAI, Anthropic, Google, Groq, OpenRouter, Azure, Ollama; используется выбранная модель
- Зависимости: anthropic, google-generativeai
- Тесты обновлены под новую конфигурацию

--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,40 @@
 # Telegram Bot Token from @BotFather
 BOT_TOKEN=your_bot_token_here
 
-# --- LLM: укажи один из вариантов в зависимости от провайдера ---
+# --- LLM: раскомментируй ОДИН блок ниже — он и будет использоваться в боте ---
 
-# OpenAI (по умолчанию в боте)
+# OpenAI (по умолчанию)
 # https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL=gpt-4o-mini
 
 # Anthropic (Claude)
 # https://console.anthropic.com/
 # ANTHROPIC_API_KEY=your_anthropic_api_key_here
+# ANTHROPIC_MODEL=claude-3-5-sonnet-20241022
 
 # Google (Gemini)
 # https://aistudio.google.com/apikey
 # GOOGLE_API_KEY=your_google_api_key_here
+# GOOGLE_MODEL=gemini-1.5-flash
 
-# Groq (быстрый inference, в т.ч. Llama)
+# Groq
 # https://console.groq.com/keys
 # GROQ_API_KEY=your_groq_api_key_here
+# GROQ_MODEL=llama-3.3-70b-versatile
 
-# OpenRouter (единый API для разных моделей)
+# OpenRouter (много моделей через один API)
 # https://openrouter.ai/keys
 # OPENROUTER_API_KEY=your_openrouter_api_key_here
 # OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+# OPENROUTER_MODEL=openai/gpt-4o-mini
 
 # Azure OpenAI
 # AZURE_OPENAI_API_KEY=your_azure_key_here
 # AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+# AZURE_OPENAI_MODEL=gpt-4o-mini
+# AZURE_OPENAI_API_VERSION=2024-02-15-preview
 
-# Ollama (локальная модель, по умолчанию http://localhost:11434)
+# Ollama (локально)
 # OLLAMA_BASE_URL=http://localhost:11434
 # OLLAMA_MODEL=llama3.2
