--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 python-telegram-bot==21.7
 openai==1.55.0
 python-dotenv==1.0.1
+anthropic==0.39.0
+google-generativeai==0.8.3
 
 # dev/test
 pytest==8.3.4
