--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,16 @@ BOT_TOKEN=your_bot_token_here
 # OpenAI (по умолчанию)
 # https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
+# Модель: раскомментируй одну строку (остальные закомментируй)
 OPENAI_MODEL=gpt-4o-mini
+# OPENAI_MODEL=gpt-4o
+# OPENAI_MODEL=gpt-4-turbo
+# OPENAI_MODEL=gpt-4-turbo-preview
+# OPENAI_MODEL=gpt-4
+# OPENAI_MODEL=gpt-4-1106-preview
+# OPENAI_MODEL=gpt-3.5-turbo
+# OPENAI_MODEL=o1
+# OPENAI_MODEL=o1-mini
 
 # Anthropic (Claude)
 # https://console.anthropic.com/
