--- a/.env.example
+++ b/.env.example
@@ -14,36 +14,82 @@ OPENAI_MODEL=gpt-4o-mini
 # OPENAI_MODEL=gpt-4
 # OPENAI_MODEL=gpt-4-1106-preview
 # OPENAI_MODEL=gpt-3.5-turbo
+# --- OpenAI thinking / reasoning (o‑серия) ---
 # OPENAI_MODEL=o1
 # OPENAI_MODEL=o1-mini
+# OPENAI_MODEL=o3-mini
+# OPENAI_MODEL=o3-mini-high
 
 # Anthropic (Claude)
 # https://console.anthropic.com/
 # ANTHROPIC_API_KEY=your_anthropic_api_key_here
+# Модель: раскомментируй одну строку
 # ANTHROPIC_MODEL=claude-3-5-sonnet-20241022
+# ANTHROPIC_MODEL=claude-3-5-haiku-20241022
+# ANTHROPIC_MODEL=claude-3-opus-20240229
+# --- Anthropic extended thinking (Claude 3.7 Sonnet / Claude 4) ---
+# ANTHROPIC_MODEL=claude-3-7-sonnet-20250219
+# ANTHROPIC_MODEL=claude-sonnet-4-20250514
 
 # Google (Gemini)
 # https://aistudio.google.com/apikey
 # GOOGLE_API_KEY=your_google_api_key_here
+# Модель: раскомментируй одну строку
 # GOOGLE_MODEL=gemini-1.5-flash
+# GOOGLE_MODEL=gemini-1.5-pro
+# GOOGLE_MODEL=gemini-1.5-flash-8b
+# --- Gemini thinking / reasoning (2.x) ---
+# GOOGLE_MODEL=gemini-2.0-flash
+# GOOGLE_MODEL=gemini-2.5-pro
+# GOOGLE_MODEL=gemini-2.5-flash
 
 # Groq
 # https://console.groq.com/keys
 # GROQ_API_KEY=your_groq_api_key_here
+# Модель: раскомментируй одну строку
 # GROQ_MODEL=llama-3.3-70b-versatile
+# GROQ_MODEL=llama-3.3-70b-specdec
+# GROQ_MODEL=llama-3.1-8b-instant
+# GROQ_MODEL=llama-3.1-70b-versatile
+# GROQ_MODEL=llama-3.1-405b-reasoning
+# GROQ_MODEL=mixtral-8x7b-32768
 
 # OpenRouter (много моделей через один API)
 # https://openrouter.ai/keys
 # OPENROUTER_API_KEY=your_openrouter_api_key_here
 # OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+# Модель: раскомментируй одну строку (формат провайдер/модель)
 # OPENROUTER_MODEL=openai/gpt-4o-mini
+# OPENROUTER_MODEL=openai/gpt-4o
+# OPENROUTER_MODEL=openai/o1-mini
+# OPENROUTER_MODEL=openai/o1
+# OPENROUTER_MODEL=anthropic/claude-3.5-sonnet
+# OPENROUTER_MODEL=google/gemini-2.0-flash-exp
+# OPENROUTER_MODEL=meta-llama/llama-3.3-70b-instruct
 
 # Azure OpenAI
 # AZURE_OPENAI_API_KEY=your_azure_key_here
 # AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
-# AZURE_OPENAI_MODEL=gpt-4o-mini
 # AZURE_OPENAI_API_VERSION=2024-02-15-preview
+# Модель (имя развёртывания): раскомментируй одну строку
+# AZURE_OPENAI_MODEL=gpt-4o-mini
+# AZURE_OPENAI_MODEL=gpt-4o
+# AZURE_OPENAI_MODEL=gpt-4-turbo
+# AZURE_OPENAI_MODEL=gpt-3.5-turbo
+# AZURE_OPENAI_MODEL=o1-mini
+# AZURE_OPENAI_MODEL=o1
 
 # Ollama (локально)
 # OLLAMA_BASE_URL=http://localhost:11434
+# Модель: раскомментируй одну строку (при раскомментировании блока)
 # OLLAMA_MODEL=llama3.2
+# OLLAMA_MODEL=llama3.1
+# OLLAMA_MODEL=llama3.2:latest
+# OLLAMA_MODEL=llama3.1:8b
+# OLLAMA_MODEL=llama3.1:70b
+# OLLAMA_MODEL=qwen2.5:7b
+# OLLAMA_MODEL=gemma2:9b
+# OLLAMA_MODEL=phi3
+# OLLAMA_MODEL=mistral
+# OLLAMA_MODEL=deepseek-r1
+# OLLAMA_MODEL=deepseek-coder
