feat: логирование событий для тестирования
- LOG_LEVEL и LOG_FILE в .env; для отладки LOG_LEVEL=DEBUG
- main: настройка логов, вывод в файл по желанию, меньше шума от telegram/httpx
- config: лог выбранного LLM (provider, model) при первом обращении
- telegram_bot: /start (chat_id, user_id), входящее сообщение (chat_id, len, history), ответ (len), ошибки
- llm: запрос (provider, model, кол-во сообщений), ответ (длина, превью в DEBUG)

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 # Telegram Bot Token from @BotFather
 BOT_TOKEN=your_bot_token_here
 
+# Логирование (для тестирования: LOG_LEVEL=DEBUG)
+# LOG_LEVEL=DEBUG
+# LOG_LEVEL=INFO
+# LOG_FILE=bot.log
+
 # --- LLM: раскомментируй ОДИН блок ниже — он и будет использоваться в боте ---
 
 # OpenAI (по умолчанию)
