feat(api): add settings storage - DB, encryption, repository (Phase 1.1)
- SQLite + SQLAlchemy models for telegram_settings and llm_settings
- Fernet encryption for tokens/API keys via SETTINGS_ENCRYPTION_KEY
- settings_repository: get/save telegram and LLM, mask secrets for API

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,11 @@ BOT_TOKEN=your_bot_token_here
 # LOG_LEVEL=INFO
 # LOG_FILE=bot.log
 
+# Admin API: хранилище настроек (обязательно для админ-панели)
+# Сгенерировать ключ: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+# SETTINGS_ENCRYPTION_KEY=your_fernet_key_here
+# DATABASE_URL=sqlite:///./data/settings.db
+
 # --- LLM: раскомментируй ОДИН блок ниже — он и будет использоваться в боте ---
 
 # OpenAI (по умолчанию)
