--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,12 @@ python-dotenv==1.0.1
 anthropic==0.39.0
 google-generativeai==0.8.3
 
+# API and settings storage
+fastapi==0.115.6
+uvicorn[standard]==0.32.1
+sqlalchemy==2.0.36
+cryptography==44.0.0
+
 # dev/test
 pytest==8.3.4
 pytest-asyncio==0.24.0
