feat(api): admin auth and audit logging (Phase 1.12)
- Optional ADMIN_API_KEY: require X-Admin-Key header when set
- Log settings_changed (block, action, applied) and settings_activated

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ BOT_TOKEN=your_bot_token_here
 # Сгенерировать ключ: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
 # SETTINGS_ENCRYPTION_KEY=your_fernet_key_here
 # DATABASE_URL=sqlite:///./data/settings.db
+# Опционально: если задан, все /api/settings* требуют заголовок X-Admin-Key: <значение>
+# ADMIN_API_KEY=your_admin_secret
 
 # --- LLM: раскомментируй ОДИН блок ниже — он и будет использоваться в боте ---
 
