chore(docker): run API + admin in container (uvicorn, port 8000, volume for DB)
- Dockerfile: copy api/ and admin/, CMD uvicorn api.app:app
- docker-compose: ports 8000:8000, volume bot_data for /app/data
- README: Docker section updated for admin on localhost:8000/admin/

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,11 @@ services:
   bot:
     build: .
     env_file: .env
-    # Полный доступ к сети: исходящие запросы к Telegram и API LLM без ограничений
-    # Сеть по умолчанию (bridge) даёт доступ в интернет
+    ports:
+      - "8000:8000"
+    volumes:
+      - bot_data:/app/data
     restart: unless-stopped
+
+volumes:
+  bot_data:
