feat(llm): Google fetch моделей, Yandex GPT, провайдеры Groq/OpenRouter/Ollama
- OpenAI: limit=100 и пагинация по after для полного списка моделей
- Google: fetch_models_google (GET /v1beta/models), добавлен в isOpenAiCompatibleProvider
- Yandex GPT: провайдер, handler _reply_yandex, тест _test_yandex, .env.example
- PROVIDERS_LIST: добавлены groq, openrouter, ollama, yandex
- Тест: проверка groq и yandex в списке провайдеров

--- a/.env.example
+++ b/.env.example
@@ -106,3 +106,9 @@ OPENAI_MODEL=gpt-4o-mini
 # OLLAMA_MODEL=mistral
 # OLLAMA_MODEL=deepseek-r1
 # OLLAMA_MODEL=deepseek-coder
+
+# Yandex GPT (админка: провайдер Yandex GPT; в env нужен folder_id для model_uri)
+# https://cloud.yandex.com/en/docs/yandexgpt/
+# YANDEX_FOLDER_ID=b1gxxxxxxxxxxxxxxxx  # ID каталога в Yandex Cloud (обязателен, если в настройках указано короткое имя модели)
+# В настройках LLM: API key (IAM-токен или API-ключ), Base URL: https://llm.api.cloud.yandex.net/foundationModels/v1
+# Модель: yandexgpt-lite или yandexgpt (тогда YANDEX_FOLDER_ID обязателен) либо полный model_uri: gpt://folder_id/yandexgpt/latest
