--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   bot:
     build: .
-    env_file: .env
+    # env_file: .env  # Removed - configuration via admin panel
     ports:
       - "8000:8000"
     volumes:
