fix(docker): restore env_file for critical environment variables
Restore env_file: .env in docker-compose.yml to ensure critical variables
(ADMIN_API_KEY, SETTINGS_ENCRYPTION_KEY, DATABASE_URL) are loaded in Docker.
While LLM and Telegram settings are managed via admin panel, these base
environment variables are still required for proper application operation.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   bot:
     build: .
-    # env_file: .env  # Removed - configuration via admin panel
+    env_file: .env  # Required for ADMIN_API_KEY, SETTINGS_ENCRYPTION_KEY, DATABASE_URL
     ports:
       - "8000:8000"
     volumes:
